<resources>
    <string name="app_name">Belfunfair</string>

    <string name="home_title">Home</string>
    <string name="map_title">Map</string>
    <string name="attractions_title">Attractions</string>

    <string name="prev_title">TITLE</string>
    <string name="prev_date">DATE</string>
    <string name="prev_description">DESCRIPTION</string>

    <string name="image_description_carrousel">Image de l\'évènement Belfunfair</string>
    <string name="image_description_lion_de_belfort">Image lion de Belfort</string>
    <string name="image_description_logo">Logo de Belfunfair</string>
    <string name="image_description_map">Carte interactive</string>
    <string name="prev_switch">Changer le thème</string>
    <string name="night_mode">Mode nuit</string>
    <string name="day_mode">Mode jour</string>
    <string name="title_maneges">Manèges</string>
    <string name="connexion">Connexion</string>
</resources>