<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.belfunfair.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.belfunfair.ui.map.MapFragment"
        android:label="@string/map_title"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_attractions"
        android:name="com.example.belfunfair.ui.attractions.AttractionsFragment"
        android:label="@string/attractions_title"
        tools:layout="@layout/fragment_attractions" />
</navigation>